--- a/currencyConverter/index.html
+++ b/currencyConverter/index.html
@@ -31,7 +31,52 @@
                 <div class="info">
                     <p class="input"><span class="currency-symbol">&#165;</span><input placeholder="0.0000"></p>
                     <p class="currency-name">JPY - Japanese Yen</p>
-                    <p class="base-currency-rate">1 USD = 111.0401 JYP</p>
+                    <p class="base-currency-rate">1 USD = 111.0401 JPY</p>
+                </div>
+                <span class="close">&times;</span>
+            </li>
+            <li class="currency" id=EUR>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="euro flag" class="flag">
+                <div class="info">
+                    <p class="input"><span class="currency-symbol">&euro;</span><input placeholder="0.0000"></p>
+                    <p class="currency-name">EUR - Euro</p>
+                    <p class="base-currency-rate">1 USD = 0.8875 EUR</p>
+                </div>
+                <span class="close">&times;</span>
+            </li>
+            <li class="currency" id=GBP>
+                <img src="https://img.geonames.org/flags/x/gb.gif" alt="british flag" class="flag">
+                <div class="info">
+                    <p class="input"><span class="currency-symbol">&#163;</span><input placeholder="0.0000"></p>
+                    <p class="currency-name">GBP - British Pounds</p>
+                    <p class="base-currency-rate">1 USD = 0.7805 GBP</p>
+                </div>
+                <span class="close">&times;</span>
+            </li>
+            <li class="currency" id=RUB>
+                <img src="https://img.geonames.org/flags/x/ru.gif" alt="russian flag" class="flag">
+                <div class="info">
+                    <p class="input"><span class="currency-symbol">&#8381;</span><input placeholder="0.0000"></p>
+                    <p class="currency-name">RUB - Russian Ruble</p>
+                    <p class="base-currency-rate">1 USD = 66.9615 RUB</p>
+                </div>
+                <span class="close">&times;</span>
+            </li>
+            <li class="currency" id=CNY>
+                <img src="https://img.geonames.org/flags/x/cn.gif" alt="chinese flag" class="flag">
+                <div class="info">
+                    <p class="input"><span class="currency-symbol">&#165;</span><input placeholder="0.0000"></p>
+                    <p class="currency-name">CNY - Chinese Yuan Remnibli</p>
+                    <p class="base-currency-rate">1 USD = 6.7756 CNY</p>
+                </div>
+                <span class="close">&times;</span>
+            </li>
+            <li class="currency" id=INR>
+                <img src="https://img.geonames.org/flags/x/in.gif" alt="indianflag" class="flag">
+                <div class="info">
+                    <p class="input"><span class="currency-symbol">&#8377;</span><input placeholder="0.0000"></p>
+                    <p class="currency-name">INR - Indian Rupee</p>
+                    <p class="base-currency-rate">1 USD = 71.1777 INR</p>
                 </div>
                 <span class="close">&times;</span>
             </li>
