add currency list

--- a/currencyConverter/index.html
+++ b/currencyConverter/index.html
@@ -81,7 +81,12 @@
                 <span class="close">&times;</span>
             </li>
         </ul>
-        <ul class="add-currency-list"></ul>
+        <ul class="add-currency-list">
+            <li data-currency="USD"><img src="https://img.geonames.org/flags/x/us.gif" alt="US flag" class="flag"><span>USD - US Dollars</span></li>
+            <li data-currency="NZD"><img src="https://img.geonames.org/flags/x/nz.gif" alt="New Zealand flag" class="flag"><span>NZD - New Zealand Dollar</span></li>
+            <li data-currency="CAD"><img src="https://img.geonames.org/flags/x/ca.gif" alt="Canadian flag" class="flag"><span>CAD - Canadian Dollar</span></li>
+            <li data-currency="MXN"><img src="https://img.geonames.org/flags/x/mx.gif" alt="Mexican flag" class="flag"><span>MXN - Mexican Pesos</span></li>
+        </ul>
         <button class="add-currency-btn"><i class="fas fa-long-arrow-alt-left"></i>Add Currency</button>
     </div>
     
