--- a/taskList/index.html
+++ b/taskList/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
 
+    <h1>Task List</h1>
 
+    <div class="container">
+        <input class="task-input" type="text">
+        <input class="submit" type="submit" value="Add Task">
+
+        <ul class="list"></ul>
+    </div>
     
     <script src="./script.js"></script>
 </body>
