remove all tasks

--- a/taskList/index.html
+++ b/taskList/index.html
@@ -18,6 +18,8 @@
 
         <ul class="list"></ul>
     </div>
+
+    <button class="delete">Remove all Tasks</button>
     
     <script src="./script.js"></script>
 </body>
