--- a/sideNavMenu/index.html
+++ b/sideNavMenu/index.html
@@ -5,10 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>side nav menu</title>
 </head>
 <body>
     
+    <h1>Home</h1>
+
+    <div class="menu-open">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <nav>
+        <div class="menu-close">
+            <span></span>
+            <span></span>
+        </div>
+
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
 
     <script src="./script.js"></script>
 </body>
