--- a/sideNavMenu/index.html
+++ b/sideNavMenu/index.html
@@ -17,7 +17,7 @@
         <span></span>
     </div>
 
-    <nav>
+    <nav class="nav">
         <div class="menu-close">
             <span></span>
             <span></span>
