--- a/javascriptWebScraper/index.html
+++ b/javascriptWebScraper/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
-    <title>Web Scraper Using Google chrome</title>
+    <title>IMDB Scraper Using Google chrome</title>
 </head>
 <body>
     
-    <h1>Web Scraper</h1>
+    <div class="container">
+        <h1>Imdb Scraper</h1>
+
+        <textarea name="" id="json-input" cols="30" rows="10"></textarea>
+
+        <table class="movie-details"></table>
+    </div>
 
     <script src="./script.js"></script>
 </body>
