--- a/javascriptWebScraper/index.html
+++ b/javascriptWebScraper/index.html
@@ -15,6 +15,8 @@
         <textarea name="" id="json-input" cols="30" rows="10"></textarea>
 
         <table class="movie-details"></table>
+
+        <div class="copy">Copy</div>
     </div>
 
     <script src="./script.js"></script>
