--- a/NewsApi/index.html
+++ b/NewsApi/index.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" />
     <title>JavaScript Fetch API: Interacting With The News API</title>
 </head>
 <body>
 
-    
+    <form class="search" action="">
+        <input class="input" type="text">
+        <input class="submit" type="submit">
+    </form>
+
+    <div class="container">
+        <ul class="news-list"></ul>
+    </div>
 
     <script src="./script.js"></script>
 </body>
