--- a/NewsApi/index.html
+++ b/NewsApi/index.html
@@ -11,7 +11,8 @@
 <body>
 
     <form class="search" action="">
-        <input class="input" type="text">
+        <label for="">News</label>
+        <input class="input" type="text"><br>
         <input class="submit" type="submit">
     </form>
 
