--- a/pagination/index.html
+++ b/pagination/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     
-    
+    <div class="container">
+        <ul class="task-list"></ul>
+        <div class="tabs">
+            <div class="first">First</div>
+            <div class="previous">Previous</div>
+            <div class="next">Next</div>
+            <div class="last">Last</div>
+        </div>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
