--- a/Disappering Navbar/index.html
+++ b/Disappering Navbar/index.html
@@ -8,7 +8,28 @@
     <title>Diasppearing Navbar</title>
 </head>
 <body>
-    
+
+    <header class="header">
+        <div class="logo">BRAND</div>
+        
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="one">
+        <div class="container">
+            <h1>WELCOME</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi sit amet molestias saepe quis delectus aliquam eaque fuga cupiditate ullam iusto fugiat sequi, ut non ipsa dolores similique! Unde, obcaecati?</p>
+        </div>
+        <section class="two"></section>
+    </section>
 
     <script src="./scrpt.js"></script>
 </body>
