--- a/Disappering Navbar/index.html
+++ b/Disappering Navbar/index.html
@@ -31,6 +31,6 @@
         <section class="two"></section>
     </section>
 
-    <script src="./scrpt.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
