html boiler plate

--- a/Minimal Nav Menu/index.html
+++ b/Minimal Nav Menu/index.html
@@ -3,10 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="./style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Minimal Navigation Menu</title>
 </head>
 <body>
     
+    <header>
+        <h2 class="logo">Logo.</h2>
+    </header>
+
+    <div class="welcome">
+        <h1>Welcome to my Website</h1>
+        <h1 class="sub">- Please click on the menu toggle</h1>
+    </div>
+
+    <div class="menu-toggle">
+        <span></span>
+        <span></span>
+    </div>
+
+    <nav class="menu">
+        <header>
+            <h2 class="menu-logo">Logo.</h2>
+        </header>
+
+        <div class="menu-close">
+            <span></span>
+            <span></span>
+        </div>
+
+        <ul>
+            <li><a href="#" class="nav-link active-link">Home</a></li>
+            <li><a href="#" class="nav-link">About</a></li>
+            <li><a href="#" class="nav-link">Projects</a></li>
+            <li><a href="#" class="nav-link">Shop</a></li>
+            <li><a href="#" class="nav-link">Contact</a></li>
+            <li><a href="#" class="nav-link">Blog</a></li>
+        </ul>
+    </nav>
+
+    <script src="./script.js"></script>
 </body>
 </html>
