--- a/Minimal Nav Menu/index.html
+++ b/Minimal Nav Menu/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="./style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Minimal Navigation Menu</title>
 </head>
 <body>
     
     <header>
-        <h2 class="logo">Logo.</h2>
+        <h2 class="logo">logo.</h2>
     </header>
 
     <div class="welcome">
@@ -25,7 +27,7 @@
 
     <nav class="menu">
         <header>
-            <h2 class="menu-logo">Logo.</h2>
+            <h2 class="menu-logo">logo.</h2>
         </header>
 
         <div class="menu-close">
