--- a/Animated Hamburger Menu/index.html
+++ b/Animated Hamburger Menu/index.html
@@ -56,7 +56,7 @@
 
 
     <div class="img">
-        <img src="./explorebible.jpg" alt="bible study">
+        <img src="./manstudy.jpg" alt="bible study">
         <div class="explore">
             <h4>Explore</h4>
         </div>
