--- a/Animated Landing Page Transitions/index.html
+++ b/Animated Landing Page Transitions/index.html
@@ -32,7 +32,7 @@
 
     <div class="image-container">
         <div class="overlay"></div>
-        <img src="./mountains.jpg" alt="cover image">
+        <img src="./mountains.jpg" alt="cover image of a mountain">
     </div>
 
     <div class="socials">
