--- a/Animate on Scroll/index.html
+++ b/Animate on Scroll/index.html
@@ -10,22 +10,22 @@
 <body>
 
     <div class="aos">
-        <h1>Heading</h1>
+        <h1>Heading 1</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam ex quasi est, unde veniam consequuntur nulla ad exercitationem dolorum dignissimos.</p>
     </div>
 
     <div class="aos">
-        <h1>Heading</h1>
+        <h1>Heading 2</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam ex quasi est, unde veniam consequuntur nulla ad exercitationem dolorum dignissimos.</p>
     </div>
 
     <div class="aos">
-        <h1>Heading</h1>
+        <h1>Heading 3</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam ex quasi est, unde veniam consequuntur nulla ad exercitationem dolorum dignissimos.</p>
     </div>
 
     <div class="aos">
-        <h1>Heading</h1>
+        <h1>Heading 4</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam ex quasi est, unde veniam consequuntur nulla ad exercitationem dolorum dignissimos.</p>
     </div>
     
