throttling for app performance

--- a/Animate on Scroll/index.html
+++ b/Animate on Scroll/index.html
@@ -29,6 +29,8 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam ex quasi est, unde veniam consequuntur nulla ad exercitationem dolorum dignissimos.</p>
     </div>
     
+    <!-- lodash throttle CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
