--- a/Draggable Slider/index.html
+++ b/Draggable Slider/index.html
@@ -5,11 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <title>Draggable slider</title>
 </head>
 <body>
     
-    
+    <div class="slider">
+        <div class="slider-inner">
+            <div class="slider-image">
+                <i class="fas fa-futbol"></i>
+            </div>
+            <div class="slider-image">
+                <i class="fas fa-football-ball"></i>
+            </div>
+            <div class="slider-image">
+                <i class="fas fa-golf-ball"></i>
+            </div>
+            <div class="slider-image">
+                <i class="fas fa-biking"></i>
+            </div>
+            <div class="slider-image">
+                <i class="fas fa-basketball-ball"></i>
+            </div>
+            <div class="slider-image">
+                <i class="fas fa-hockey-puck"></i>
+            </div>
+            <div class="slider-image">
+                <i class="fas fa-swimmer"></i>
+            </div>
+        </div>
+    </div>
 
     <script src="./script.js"></script>
 </body>
