--- a/Animated Dark Mode Toggle/index.html
+++ b/Animated Dark Mode Toggle/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Animated dark mode toggle</title>
 </head>
 <body>
     
+    <div class="mode-tog"></div>
+    <div class="container">
+        <div class="dark-mode"></div>
+    </div>
 
+    <h2>Logo</h2>
 
     <script src="./script.js"></script>
 </body>
