--- a/InfiniteScrollEffect/index.html
+++ b/InfiniteScrollEffect/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Infinite Scroll Effect</title>
 </head>
 <body>
-    
 
-    <h1>Amazon</h1>
+    <nav class="menu">
+        <div class="menu-item">
+            <a href="" class="menu-item-inner">Home</a>
+        </div>
+        <div class="menu-item">
+            <a href="" class="menu-item-inner">About</a>
+        </div>
+        <div class="menu-item">
+            <a href="" class="menu-item-inner">Projects</a>
+        </div>
+        <div class="menu-item">
+            <a href="" class="menu-item-inner">Blog</a>
+        </div>
+        <div class="menu-item">
+            <a href="" class="menu-item-inner">Contact</a>
+        </div>
+    </nav>
+    <script src="./script.js"></script>
 </body>
 </html>
