--- a/InfiniteImageSlider/index.html
+++ b/InfiniteImageSlider/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Infinite Image Slider</title>
 </head>
 <body>
     
+    <div class="slider-wrap">
+        <div class="slider">
+            <div class="slider-item">
+                <div class="img-div"></div>
+            </div>
+            <div class="slider-item">
+                <div class="img-div"></div>
+            </div>
+            <div class="slider-item">
+                <div class="img-div"></div>
+            </div>
+            <div class="slider-item">
+                <div class="img-div"></div>
+            </div>
+            <div class="slider-item">
+                <div class="img-div"></div>
+            </div>
+            <div class="slider-item">
+                <div class="img-div"></div>
+            </div>
+        </div>
+    </div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
