--- a/horizontalParallaxSlider/index.html
+++ b/horizontalParallaxSlider/index.html
@@ -12,19 +12,19 @@
     <main>
         <div class="slider">
             <div class="slider-inner">
-                <div class="items">
+                <div class="item">
                     <div class="img"></div>
                 </div>
-                <div class="items">
+                <div class="item">
                     <div class="img"></div>
                 </div>
-                <div class="items">
+                <div class="item">
                     <div class="img"></div>
                 </div>
-                <div class="items">
+                <div class="item">
                     <div class="img"></div>
                 </div>
-                <div class="items">
+                <div class="item">
                     <div class="img"></div>
                 </div>
             </div>
