--- a/horizontalParallaxSlider/index.html
+++ b/horizontalParallaxSlider/index.html
@@ -27,6 +27,9 @@
                 <div class="item">
                     <div class="img"></div>
                 </div>
+                <div class="item">
+                    <div class="img"></div>
+                </div>
             </div>
         </div>
     </main>
