--- a/AOSTextReveal/index.html
+++ b/AOSTextReveal/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Graduate&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>AOS Text Reveal</title>
 </head>
 <body>
     
-    <h1>WELCOME</h1>
+    <h1>WELCOME.</h1>
 
     <ul>
         <li><span>Navy Lead</span></li>
