--- a/AOS3DEffects/index.html
+++ b/AOS3DEffects/index.html
@@ -31,6 +31,7 @@
                     <div class="img"></div>
                 </div>
             </div>
+            <div class="container"></div>
         </div>
     </main>
     
