--- a/AOSStickyElements/index.html
+++ b/AOSStickyElements/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AOS Sticky Elements</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
+    <main>
+        <div class="scrollable">
+            <section></section>
+            <section></section>
+            <section></section>
+            <div class="projects">
+                <h1>Projects</h1>
+            </div>
+            <section></section>
+            <section></section>
+            <section></section>
+        </div>
+    </main>
+    <script src="./script.js"></script>
 </body>
 </html>
