--- a/AOSStickyElements/index.html
+++ b/AOSStickyElements/index.html
@@ -14,7 +14,7 @@
             <section></section>
             <section></section>
             <section></section>
-            <div class="projects">
+            <div class="project">
                 <h1>Projects</h1>
             </div>
             <section></section>
