--- a/AOSStickyElements/index.html
+++ b/AOSStickyElements/index.html
@@ -13,12 +13,27 @@
         <div class="scrollable">
             <section></section>
             <section></section>
-            <section></section>
+            <section>
+                <div class="container">
+                    <img src="./images/img1.jpg" alt="">
+                    <img src="./images/img2.jpg" alt="">
+                </div>
+            </section>
             <div class="project">
                 <h1>Projects</h1>
             </div>
-            <section></section>
-            <section></section>
+            <section>
+                <div class="container">
+                    <img src="./images/img3.jpg" alt="">
+                    <img src="./images/img4.jpg" alt="">
+                </div>
+            </section>
+            <section>
+                <div class="container">
+                    <img src="./images/img5.jpg" alt="">
+                    <img src="./images/img6.jpg" alt="">
+                </div>
+            </section>
             <section></section>
         </div>
     </main>
