--- a/THREEJS-imageRGB-Split/index.html
+++ b/THREEJS-imageRGB-Split/index.html
@@ -5,10 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
-    <title>THREE JS: image RGB Split / Distortion On Scroll
+    <title>THREE JS: image RGB Split
     </title>
 </head>
 <body>
     
+
+    <main>
+        <div class="scrollable">
+            <div class="container">
+                <div class="img-container">
+                    <h1>MONOCHROME</h1>
+                    <img src="./images/1.jpeg" alt="">
+                </div>
+                <div class="img-container">
+                    <h1>STREET</h1>
+                    <img src="./images/2.jpeg" alt="">
+                </div>
+                <div class="img-container">
+                    <h1>ABSTRACT</h1>
+                    <img src="./images/3.jpeg" alt="">
+                </div>
+                <div class="img-container">
+                    <h1>ROSE</h1>
+                    <img src="./images/4.jpeg" alt="">
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="./js/app.js"></script>
 </body>
 </html>
