--- a/ExpandingGallery/index.html
+++ b/ExpandingGallery/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
     <title>Gallery</title>
 </head>
 <body>
     
 
     <div class="header">
-        <span class="heading">
+        <span class="heading show">
             <h1>GALLERY</h1>
         </span>
     </div>
@@ -36,7 +38,7 @@
                     <div class="img"></div>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item end">
                 <div class="title">
                     <h2>Abstract/<span>(03)</span></h2>
                     <h5>Details</h5>
@@ -65,7 +67,7 @@
                     <div class="img"></div>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item end">
                 <div class="title">
                     <h2>Commute/<span>(06)</span></h2>
                     <h5>Details</h5>
