--- a/ResponsiveProductSlider/index.html
+++ b/ResponsiveProductSlider/index.html
@@ -9,6 +9,45 @@
 </head>
 <body>
     
+    <div class="slider-wrap">
+        <div class="slider">
+            <div class="slider-inner">
+                <div class="item">
+                    <h3>Item One</h3>
+                </div>
+                <div class="item">
+                    <h3>Item Two</h3>
+                </div>
+                <div class="item">
+                    <h3>Item Three</h3>
+                </div>
+                <div class="item">
+                    <h3>Item Four</h3>
+                </div>
+                <div class="item">
+                    <h3>Item Five</h3>
+                </div>
+                <div class="item">
+                    <h3>Item Six</h3>
+                </div>
+                <div class="item">
+                    <h3>Item Seven</h3>
+                </div>
+                <div class="item">
+                    <h3>Item Eight</h3>
+                </div>
+                <div class="item">
+                    <h3>Item Nine</h3>
+                </div>
+                <div class="item">
+                    <h3>Item Ten</h3>
+                </div>
+            </div>
+        </div>
+        <div class="progress-bar">
+            <div class="prog-bar-inner"></div>
+        </div>
+    </div>
 
     <script src="./script.js"></script>
 </body>
